--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,8 @@
 		<module>main/plugins/org.talend.hadoop.distribution.cdh540</module>
 		<module>main/plugins/org.talend.hadoop.distribution.cdh550</module>
 		<module>main/plugins/org.talend.hadoop.distribution.cdh550.jars</module>
+		<module>main/plugins/org.talend.hadoop.distribution.cdh570</module>
+		<module>main/plugins/org.talend.hadoop.distribution.cdh570.jars</module>		
 		<module>main/plugins/org.talend.hadoop.distribution.custom</module>
 		<module>main/plugins/org.talend.hadoop.distribution.emr103</module>
 		<module>main/plugins/org.talend.hadoop.distribution.emr240</module>
@@ -136,6 +138,7 @@
 		<module>test/plugins/org.talend.hadoop.distribution.cdh510mr2.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.cdh540.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.cdh550.test</module>
+		<module>test/plugins/org.talend.hadoop.distribution.cdh570.test</module>		
 		<module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
