--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -120,9 +120,9 @@
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh570"
-            id="hbase-hadoop2-compat-cdh5.7.0"
-            name="hbase-hadoop2-compat-1.2.0-cdh5.7.0.jar"
-            mvn_uri="mvn:org.talend.libraries/hbase-hadoop2-compat-1.2.0-cdh5.7.0/6.1.0">
+            id="hbase-hadoop-compat-cdh5.7.0"
+            name="hbase-hadoop-compat-1.2.0-cdh5.7.0.jar"
+            mvn_uri="mvn:org.talend.libraries/hbase-hadoop-compat-1.2.0-cdh5.7.0/6.1.0">
         </libraryNeeded>
         
         <!-- Hive libraries -->
@@ -237,9 +237,9 @@
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh570"
-            id="sqoop-cdh5.7.0"
-            name="sqoop-1.4.6-cdh5.7.0.jar"
-            mvn_uri="mvn:org.talend.libraries/sqoop-1.4.6-cdh5.7.0/6.1.0">
+            id="sqoop-cdh5.5.2"
+            name="sqoop-1.4.6-cdh5.5.2.jar"
+            mvn_uri="mvn:org.talend.libraries/sqoop-1.4.6-cdh5.5.2/6.1.0">
         </libraryNeeded>                        
         
         <!-- Third parties libraries -->
@@ -464,8 +464,8 @@
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh570"
             id="spark-streaming-kafka-cdh5.7.0"
-            name="spark-streaming-kafka_2.10-1.5.0-cdh5.7.0.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-streaming-kafka_2.10-1.5.0-cdh5.7.0/6.0.0">
+            name="spark-streaming-kafka_2.10-1.6.0-cdh5.7.0.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-streaming-kafka_2.10-1.6.0-cdh5.7.0/6.0.0">
         </libraryNeeded>
                 
         <libraryNeeded
@@ -582,6 +582,7 @@
              <library id="log4j-1.2.17.jar" />
              <library id="slf4j-api-1.7.5.jar" />
              <library id="slf4j-log4j12-1.7.5.jar" />
+             <library id="metrics-core-2.2.0.jar" />
         </libraryNeededGroup>
         
         <!-- Pig group -->
@@ -618,6 +619,8 @@
                 id="PIG-HBASE-LIB-CDH_5_7"
                 name="PIG-HBASE-LIB-CDH_5_7">
             <library id="hbase-server-cdh5.7.0"/>
+            <library id="netty-all-4.0.23.Final.jar"/>
+            <library id="hbase-hadoop-compat-cdh5.7.0" />
         </libraryNeededGroup>
 
         <!-- Pig parquet group -->
@@ -669,6 +672,7 @@
                 name="SQOOP-LIB-CDH_5_7">
             <library id="sqoop-cdh5.7.0"/>
             <library id="avro-mapred-cdh5.7.0"/>
+            <library id="json-20080701.jar"/>
         </libraryNeededGroup>
         
         <!-- Hive group -->
@@ -705,7 +709,7 @@
             <library id="hbase-client-cdh5.7.0" />
             <library id="hbase-protocol-cdh5.7.0" />
             <library id="hbase-server-cdh5.7.0" />
-            <library id="hbase-hadoop2-compat-cdh5.7.0" />
+            <library id="hbase-hadoop-compat-cdh5.7.0" />
             <library id="high-scale-lib-1.1.1.jar"/>
             <library id="hive-hbase-handler-cdh5.7.0"/>
             <library id="netty-all-4.0.23.Final.jar"/>
@@ -843,19 +847,19 @@
           point="org.talend.core.runtime.classloader_provider">
       <classloader
             index="HIVE:CLOUDERA:Cloudera_CDH5_7:EMBEDDED"
-            libraries="antlr-runtime-3.4.jar;commons-httpclient-3.0.1.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-3.2.6.jar;datanucleus-core-3.2.10.jar;datanucleus-rdbms-3.2.9.jar;derby-10.11.1.1.jar;hive-exec-1.1.0-cdh5.7.0.jar;hive-jdbc-1.1.0-cdh5.7.0.jar;hive-metastore-1.1.0-cdh5.7.0.jar;hive-service-1.1.0-cdh5.7.0.jar;httpclient-4.2.5.jar;httpcore-4.2.5.jar;jdo-api-3.0.1.jar;libfb303-0.9.2.jar;libthrift-0.9.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;hbase-common-1.0.0-cdh5.7.0.jar;hbase-client-1.0.0-cdh5.7.0.jar;hbase-protocol-1.0.0-cdh5.7.0.jar;hbase-server-1.0.0-cdh5.7.0.jar;hbase-hadoop2-compat-1.2.0-cdh5.7.0.jar;high-scale-lib-1.1.1.jar;hive-hbase-handler-1.1.0-cdh5.7.0.jar;netty-all-4.0.23.Final.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-hdfs-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;avro-1.7.6-cdh5.7.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.7.0.jar;hadoop-yarn-api-2.6.0-cdh5.7.0.jar;hadoop-yarn-client-2.6.0-cdh5.7.0.jar;hadoop-yarn-common-2.6.0-cdh5.7.0.jar;hadoop-yarn-server-web-proxy-2.6.0-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;jersey-client-1.9.jar">
+            libraries="antlr-runtime-3.4.jar;commons-httpclient-3.0.1.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-3.2.6.jar;datanucleus-core-3.2.10.jar;datanucleus-rdbms-3.2.9.jar;derby-10.11.1.1.jar;hive-exec-1.1.0-cdh5.7.0.jar;hive-jdbc-1.1.0-cdh5.7.0.jar;hive-metastore-1.1.0-cdh5.7.0.jar;hive-service-1.1.0-cdh5.7.0.jar;httpclient-4.2.5.jar;httpcore-4.2.5.jar;jdo-api-3.0.1.jar;libfb303-0.9.2.jar;libthrift-0.9.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;hbase-common-1.0.0-cdh5.7.0.jar;hbase-client-1.0.0-cdh5.7.0.jar;hbase-protocol-1.0.0-cdh5.7.0.jar;hbase-server-1.0.0-cdh5.7.0.jar;hbase-hadoop-compat-1.2.0-cdh5.7.0.jar;high-scale-lib-1.1.1.jar;hive-hbase-handler-1.1.0-cdh5.7.0.jar;netty-all-4.0.23.Final.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-hdfs-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;avro-1.7.6-cdh5.7.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.7.0.jar;hadoop-yarn-api-2.6.0-cdh5.7.0.jar;hadoop-yarn-client-2.6.0-cdh5.7.0.jar;hadoop-yarn-common-2.6.0-cdh5.7.0.jar;hadoop-yarn-server-web-proxy-2.6.0-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;jersey-client-1.9.jar">
       </classloader>
       <classloader
             index="HIVE:CLOUDERA:Cloudera_CDH5_7:STANDALONE"
-            libraries="antlr-runtime-3.4.jar;commons-httpclient-3.0.1.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-3.2.6.jar;datanucleus-core-3.2.10.jar;datanucleus-rdbms-3.2.9.jar;derby-10.11.1.1.jar;hive-exec-1.1.0-cdh5.7.0.jar;hive-jdbc-1.1.0-cdh5.7.0.jar;hive-metastore-1.1.0-cdh5.7.0.jar;hive-service-1.1.0-cdh5.7.0.jar;httpclient-4.2.5.jar;httpcore-4.2.5.jar;jdo-api-3.0.1.jar;libfb303-0.9.2.jar;libthrift-0.9.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;hbase-common-1.0.0-cdh5.7.0.jar;hbase-client-1.0.0-cdh5.7.0.jar;hbase-protocol-1.0.0-cdh5.7.0.jar;hbase-server-1.0.0-cdh5.7.0.jar;hbase-hadoop2-compat-1.2.0-cdh5.7.0.jar;high-scale-lib-1.1.1.jar;hive-hbase-handler-1.1.0-cdh5.7.0.jar;netty-all-4.0.23.Final.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-hdfs-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;avro-1.7.6-cdh5.7.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.7.0.jar;hadoop-yarn-api-2.6.0-cdh5.7.0.jar;hadoop-yarn-client-2.6.0-cdh5.7.0.jar;hadoop-yarn-common-2.6.0-cdh5.7.0.jar;hadoop-yarn-server-web-proxy-2.6.0-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;jersey-client-1.9.jar">
+            libraries="antlr-runtime-3.4.jar;commons-httpclient-3.0.1.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-3.2.6.jar;datanucleus-core-3.2.10.jar;datanucleus-rdbms-3.2.9.jar;derby-10.11.1.1.jar;hive-exec-1.1.0-cdh5.7.0.jar;hive-jdbc-1.1.0-cdh5.7.0.jar;hive-metastore-1.1.0-cdh5.7.0.jar;hive-service-1.1.0-cdh5.7.0.jar;httpclient-4.2.5.jar;httpcore-4.2.5.jar;jdo-api-3.0.1.jar;libfb303-0.9.2.jar;libthrift-0.9.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;hbase-common-1.0.0-cdh5.7.0.jar;hbase-client-1.0.0-cdh5.7.0.jar;hbase-protocol-1.0.0-cdh5.7.0.jar;hbase-server-1.0.0-cdh5.7.0.jar;hbase-hadoop-compat-1.2.0-cdh5.7.0.jar;high-scale-lib-1.1.1.jar;hive-hbase-handler-1.1.0-cdh5.7.0.jar;netty-all-4.0.23.Final.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-hdfs-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;avro-1.7.6-cdh5.7.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.7.0.jar;hadoop-yarn-api-2.6.0-cdh5.7.0.jar;hadoop-yarn-client-2.6.0-cdh5.7.0.jar;hadoop-yarn-common-2.6.0-cdh5.7.0.jar;hadoop-yarn-server-web-proxy-2.6.0-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;jersey-client-1.9.jar">
       </classloader>
       <classloader
             index="HIVE2:CLOUDERA:Cloudera_CDH5_7:EMBEDDED"
-            libraries="antlr-runtime-3.4.jar;commons-httpclient-3.0.1.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-3.2.6.jar;datanucleus-core-3.2.10.jar;datanucleus-rdbms-3.2.9.jar;derby-10.11.1.1.jar;hive-exec-1.1.0-cdh5.7.0.jar;hive-jdbc-1.1.0-cdh5.7.0.jar;hive-metastore-1.1.0-cdh5.7.0.jar;hive-service-1.1.0-cdh5.7.0.jar;httpclient-4.2.5.jar;httpcore-4.2.5.jar;jdo-api-3.0.1.jar;libfb303-0.9.2.jar;libthrift-0.9.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;hbase-common-1.0.0-cdh5.7.0.jar;hbase-client-1.0.0-cdh5.7.0.jar;hbase-protocol-1.0.0-cdh5.7.0.jar;hbase-server-1.0.0-cdh5.7.0.jar;hbase-hadoop2-compat-1.2.0-cdh5.7.0.jar;high-scale-lib-1.1.1.jar;hive-hbase-handler-1.1.0-cdh5.7.0.jar;netty-all-4.0.23.Final.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-hdfs-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;avro-1.7.6-cdh5.7.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.7.0.jar;hadoop-yarn-api-2.6.0-cdh5.7.0.jar;hadoop-yarn-client-2.6.0-cdh5.7.0.jar;hadoop-yarn-common-2.6.0-cdh5.7.0.jar;hadoop-yarn-server-web-proxy-2.6.0-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;jersey-client-1.9.jar">
+            libraries="antlr-runtime-3.4.jar;commons-httpclient-3.0.1.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-3.2.6.jar;datanucleus-core-3.2.10.jar;datanucleus-rdbms-3.2.9.jar;derby-10.11.1.1.jar;hive-exec-1.1.0-cdh5.7.0.jar;hive-jdbc-1.1.0-cdh5.7.0.jar;hive-metastore-1.1.0-cdh5.7.0.jar;hive-service-1.1.0-cdh5.7.0.jar;httpclient-4.2.5.jar;httpcore-4.2.5.jar;jdo-api-3.0.1.jar;libfb303-0.9.2.jar;libthrift-0.9.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;hbase-common-1.0.0-cdh5.7.0.jar;hbase-client-1.0.0-cdh5.7.0.jar;hbase-protocol-1.0.0-cdh5.7.0.jar;hbase-server-1.0.0-cdh5.7.0.jar;hbase-hadoop-compat-1.2.0-cdh5.7.0.jar;high-scale-lib-1.1.1.jar;hive-hbase-handler-1.1.0-cdh5.7.0.jar;netty-all-4.0.23.Final.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-hdfs-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;avro-1.7.6-cdh5.7.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.7.0.jar;hadoop-yarn-api-2.6.0-cdh5.7.0.jar;hadoop-yarn-client-2.6.0-cdh5.7.0.jar;hadoop-yarn-common-2.6.0-cdh5.7.0.jar;hadoop-yarn-server-web-proxy-2.6.0-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;jersey-client-1.9.jar">
       </classloader>
       <classloader
             index="HIVE2:CLOUDERA:Cloudera_CDH5_7:STANDALONE"
-            libraries="antlr-runtime-3.4.jar;commons-httpclient-3.0.1.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-3.2.6.jar;datanucleus-core-3.2.10.jar;datanucleus-rdbms-3.2.9.jar;derby-10.11.1.1.jar;hive-exec-1.1.0-cdh5.7.0.jar;hive-jdbc-1.1.0-cdh5.7.0.jar;hive-metastore-1.1.0-cdh5.7.0.jar;hive-service-1.1.0-cdh5.7.0.jar;httpclient-4.2.5.jar;httpcore-4.2.5.jar;jdo-api-3.0.1.jar;libfb303-0.9.2.jar;libthrift-0.9.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;hbase-common-1.0.0-cdh5.7.0.jar;hbase-client-1.0.0-cdh5.7.0.jar;hbase-protocol-1.0.0-cdh5.7.0.jar;hbase-server-1.0.0-cdh5.7.0.jar;hbase-hadoop2-compat-1.2.0-cdh5.7.0.jar;high-scale-lib-1.1.1.jar;hive-hbase-handler-1.1.0-cdh5.7.0.jar;netty-all-4.0.23.Final.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-hdfs-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;avro-1.7.6-cdh5.7.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.7.0.jar;hadoop-yarn-api-2.6.0-cdh5.7.0.jar;hadoop-yarn-client-2.6.0-cdh5.7.0.jar;hadoop-yarn-common-2.6.0-cdh5.7.0.jar;hadoop-yarn-server-web-proxy-2.6.0-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;jersey-client-1.9.jar">
+            libraries="antlr-runtime-3.4.jar;commons-httpclient-3.0.1.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-3.2.6.jar;datanucleus-core-3.2.10.jar;datanucleus-rdbms-3.2.9.jar;derby-10.11.1.1.jar;hive-exec-1.1.0-cdh5.7.0.jar;hive-jdbc-1.1.0-cdh5.7.0.jar;hive-metastore-1.1.0-cdh5.7.0.jar;hive-service-1.1.0-cdh5.7.0.jar;httpclient-4.2.5.jar;httpcore-4.2.5.jar;jdo-api-3.0.1.jar;libfb303-0.9.2.jar;libthrift-0.9.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;hbase-common-1.0.0-cdh5.7.0.jar;hbase-client-1.0.0-cdh5.7.0.jar;hbase-protocol-1.0.0-cdh5.7.0.jar;hbase-server-1.0.0-cdh5.7.0.jar;hbase-hadoop-compat-1.2.0-cdh5.7.0.jar;high-scale-lib-1.1.1.jar;hive-hbase-handler-1.1.0-cdh5.7.0.jar;netty-all-4.0.23.Final.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-hdfs-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;avro-1.7.6-cdh5.7.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.7.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.7.0.jar;hadoop-yarn-api-2.6.0-cdh5.7.0.jar;hadoop-yarn-client-2.6.0-cdh5.7.0.jar;hadoop-yarn-common-2.6.0-cdh5.7.0.jar;hadoop-yarn-server-web-proxy-2.6.0-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;jersey-client-1.9.jar">
       </classloader>
       <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH5_7"
