[TBD-3133] Add HTTP user/password on HCatalog to be compatible with mapr ticket

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogLoad/tHCatalogLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogLoad/tHCatalogLoad_messages.properties
@@ -51,3 +51,6 @@ DIE_ON_ERROR.NAME=Die on error
 ACTIVATE_LOG.NAME=Retrieve the HCatalog logs
 STDOUT.NAME=Standard Output Folder
 STDERR.NAME=Error Output Folder
+
+SET_PASSWORD.NAME=Set password
+PASSWORD.NAME=
