--- a/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages.properties
@@ -115,3 +115,6 @@ SET_FIELD_TERMINATED_BY.NAME=Field
 SET_COLLECTION_ITEM_TERMINATED_BY.NAME=Collection Item
 SET_MAP_KEY_TERMINATED_BY.NAME=Map Key
 SET_LINES_TERMINATED_BY.NAME=Line
+
+SET_PASSWORD.NAME=Set password
+PASSWORD.NAME=
