--- a/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
@@ -62,3 +62,13 @@ FIELDSEPARATOR.NAME=Field Separator
 CUSTOM_ENCODING.NAME=Custom encoding
 ENCODING.NAME=Encoding
 
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+MAPRTICKET_USERNAME.NAME=Name
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+AUTHENTICATION_MAPR.NAME=Authentication MapR Ticket
+HADOOP_LOGIN.NAME=
