--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -241,3 +241,14 @@ CROSS_PLATFORM_SUBMISSION.NAME=Activate the cross platform application submissio
 DIE_ON_ERROR.NAME=Die on error
 
 EXIT_CODE.NAME=Exit code
+
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+MAPRTICKET_USERNAME.NAME=Username
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration (in s)
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+AUTHENTICATION_MAPR.NAME=Authentication MapR Ticket
+HADOOP_LOGIN.NAME=
