--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -192,7 +192,7 @@ USE_MAPRTICKET.NAME=Use MapR Ticket authentication
 MAPRTICKET_USERNAME.NAME=Username
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
-MAPRTICKET_DURATION.NAME=Ticket duration
+MAPRTICKET_DURATION.NAME=Ticket duration (in s)
 SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
 MAPR_HOME_DIR.NAME=
 SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
