[TBD-3019] Add HBase support for EMR 4.6.0 distribution

--- a/main/plugins/org.talend.hadoop.distribution.emr450.jars/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr450.jars/pom.xml
@@ -1,12 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.talend.studio</groupId>
-    <artifactId>tbd-studio-se</artifactId>
-    <version>6.2.0-SNAPSHOT</version>
-    <relativePath>../../../</relativePath>
-  </parent>
-  <artifactId>org.talend.hadoop.distribution.emr450.jars</artifactId>
-  <packaging>eclipse-plugin</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.talend.studio</groupId>
+		<artifactId>tbd-studio-se</artifactId>
+		<version>6.2.0-SNAPSHOT</version>
+		<relativePath>../../../</relativePath>
+	</parent>
+	<artifactId>org.talend.hadoop.distribution.emr450.jars</artifactId>
+	<packaging>eclipse-plugin</packaging>
+	<properties>
+		<talend.groupid>org.talend.libraries</talend.groupid>
+		<talend.version.620>6.2.0</talend.version.620>
+	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.8</version>
+				<executions>
+					<execution>
+						<id>copy-maven-repository</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<stripVersion>true</stripVersion>
+							<outputDirectory>${project.basedir}/lib</outputDirectory>
+							<artifactItems>
+								<artifactItem>
+									<groupId>${talend.groupid}</groupId>
+									<artifactId>hbase-common-1.2.0</artifactId>
+									<version>${talend.version.620}</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${talend.groupid}</groupId>
+									<artifactId>hbase-client-1.2.0</artifactId>
+									<version>${talend.version.620}</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${talend.groupid}</groupId>
+									<artifactId>hbase-protocol-1.2.0</artifactId>
+									<version>${talend.version.620}</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${talend.groupid}</groupId>
+									<artifactId>hbase-server-1.2.0</artifactId>
+									<version>${talend.version.620}</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${talend.groupid}</groupId>
+									<artifactId>hbase-hadoop-compat-1.2.0</artifactId>
+									<version>${talend.version.620}</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${talend.groupid}</groupId>
+									<artifactId>hive-hbase-handler-1.0.0-amzn-4</artifactId>
+									<version>${talend.version.620}</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${talend.groupid}</groupId>
+									<artifactId>netty-all-4.0.23.Final</artifactId>
+									<version>${talend.version.620}</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${talend.groupid}</groupId>
+									<artifactId>pig-0.14.0-amzn-0-core-h2-emr460</artifactId>
+									<version>${talend.version.620}</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${talend.groupid}</groupId>
+									<artifactId>zookeeper-3.4.8</artifactId>
+									<version>${talend.version.620}</version>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<repositories>
+		<repository>
+			<id>talend_nexus</id>
+			<url>https://talend-update.talend.com/nexus/content/repositories/libraries</url>
+		</repository>
+	</repositories>
 </project>
+
