--- a/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
@@ -57,6 +57,37 @@
             id="hadoop-yarn-common-emr450-latest"
             name="hadoop-yarn-common-2.7.2-amzn-0.jar" 
             mvn_uri="mvn:org.talend.libraries/hadoop-yarn-common-2.7.2-amzn-0/6.2.0"/>
+            
+        <!-- HBase libraries (EMR 4.6.0 only) -->
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr450"
+            id="hbase-common-emr460-latest"
+            name="hbase-common-1.2.0.jar"
+            mvn_uri="mvn:org.talend.libraries/hbase-common-1.2.0/6.2.0"/>
+                
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr450"
+            id="hbase-client-emr460-latest"
+            name="hbase-client-1.2.0.jar"
+            mvn_uri="mvn:org.talend.libraries/hbase-client-1.2.0/6.2.0"/>
+                
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr450"
+            id="hbase-protocol-emr460-latest"
+            name="hbase-protocol-1.2.0.jar"
+            mvn_uri="mvn:org.talend.libraries/hbase-protocol-1.2.0/6.2.0"/>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr450"
+            id="hbase-server-emr460-latest"
+            name="hbase-server-1.2.0.jar"
+            mvn_uri="mvn:org.talend.libraries/hbase-server-1.2.0/6.2.0"/>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr450"
+            id="hbase-hadoop-compat-emr460-latest"
+            name="hbase-hadoop-compat-1.2.0.jar"
+            mvn_uri="mvn:org.talend.libraries/hbase-hadoop-compat-1.2.0/6.2.0"/>
         
         <!-- Hive libraries -->
         <libraryNeeded
@@ -112,7 +143,13 @@
             id="hive-hcatalog-server-extensions-emr450-latest"
             name="hive-hcatalog-server-extensions-1.0.0-amzn-4.jar" 
             mvn_uri="mvn:org.talend.libraries/hive-hcatalog-server-extensions-1.0.0-amzn-4/6.2.0"/>
-        
+            
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr450"
+            id="hive-hbase-handler-emr460-latest"
+            name="hive-hbase-handler-1.0.0-amzn-4.jar" 
+            mvn_uri="mvn:org.talend.libraries/hive-hbase-handler-1.0.0-amzn-4/6.2.0"/>
+                    
         <!-- Pig libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr450"
@@ -123,8 +160,8 @@
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr450"
             id="pig-emr450-latest"
-            name="pig-0.14.0-amzn-0-core-h2.jar" 
-            mvn_uri="mvn:org.talend.libraries/pig-0.14.0-amzn-0-core-h2/6.2.0"/>
+            name="pig-0.14.0-amzn-0-core-h2-emr460.jar" 
+            mvn_uri="mvn:org.talend.libraries/pig-0.14.0-amzn-0-core-h2-emr460/6.2.0"/>
             
         <libraryNeeded
             context="plugin:org.talend.libraries.hadoop"
@@ -489,6 +526,43 @@
             <library id="pigutil.jar"/>
         </libraryNeededGroup>
         
+        <!-- Pig HBase group (EMR 4.6.0 only) -->
+        <libraryNeededGroup
+                description="Pig HBase libraries for EMR 4.6.0"
+                id="PIG-HBASE-LIB-EMR_4_6_0_LATEST"
+                name="PIG-HBASE-LIB-EMR_4_6_0_LATEST">
+            <library id="hbase-server-emr460-latest"/>
+            <library id="hbase-hadoop-compat-emr460-latest" />
+        </libraryNeededGroup>
+        
+        <!-- HBase group (EMR 4.6.0 only) -->
+        <libraryNeededGroup
+                description="HBase libraries for EMR 4.6.0"
+                id="HBASE-LIB-EMR_4_6_0_LATEST"
+                name="HBASE-LIB-EMR_4_6_0_LATEST"  >
+             <library id="hbase-common-emr460-latest" />
+             <library id="hbase-client-emr460-latest" />
+             <library id="hbase-protocol-emr460-latest" />
+             <library id="hadoop-common-emr450-latest" />
+             <library id="hadoop-auth-emr450-latest" />
+             <library id="commons-logging-1.2.jar" />
+             <library id="commons-codec-1.9.jar" />
+             <library id="commons-configuration-1.6.jar" />
+             <library id="commons-lang-2.6.jar" />
+             <library id="commons-collections-3.2.2.jar" />
+             <library id="zookeeper-emr450-latest" />
+             <library id="htrace-core-3.1.0-incubating.jar" />
+             <library id="guava-12.0.1.jar" />
+             <library id="jackson-mapper-asl-1.9.13.jar" />
+             <library id="jackson-core-asl-1.9.13.jar" />
+             <library id="netty-all-4.0.23.Final.jar" />
+             <library id="protobuf-java-2.5.0.jar" />
+             <library id="log4j-1.2.17.jar" />
+             <library id="slf4j-api-1.7.10.jar"/>
+             <library id="slf4j-log4j12-1.7.10.jar"/>
+             <library id="metrics-core-2.2.0.jar"/>
+        </libraryNeededGroup>
+        
         <!-- Hive group -->
         <libraryNeededGroup
                 description="The latest Hive libraries for EMR 4.5.0"
@@ -515,8 +589,6 @@
              <library id="avro-emr450-latest"/>
              <library id="commons-configuration-1.6.jar"/>
              <library id="commons-httpclient-3.0.1.jar"/>
-             <!--library id="httpcore-4.2.5.jar"/>
-             <library id="httpclient-4.2.5.jar"/-->
              <library id="gson-2.2.4.jar"/>
              <library id="httpcore-4.3.2.jar"/>
              <library id="httpclient-4.3.4.jar"/>
@@ -539,6 +611,21 @@
              <library id="curator-client-2.6.0.jar"/>
              <library id="emr-metrics-client-emr450-latest"/>
              <library id="htrace-core-emr450-latest"/>
+        </libraryNeededGroup>
+        
+        <!-- Hive HBase group (EMR 4.6.0 only) -->
+        <libraryNeededGroup
+                description="Hive HBase libraries for EMR 4.6.0"
+                id="HIVE-HBASE-LIB-EMR_4_6_0_LATEST"
+                name="HIVE-HBASE-LIB-EMR_4_6_0_LATEST">
+            <library id="hbase-common-emr460-latest" />
+            <library id="hbase-client-emr460-latest" />
+            <library id="hbase-protocol-emr460-latest" />
+            <library id="hbase-server-emr460-latest" />
+            <library id="hbase-hadoop-compat-emr460-latest" />
+            <library id="high-scale-lib-1.1.1.jar"/>
+            <library id="hive-hbase-handler-emr460-latest"/>
+            <library id="netty-all-4.0.23.Final.jar"/>
         </libraryNeededGroup>
         
         <!-- Sqoop group -->
