--- a/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
@@ -282,13 +282,7 @@
             name="aws-java-sdk-cloudwatch-1.10.56.jar"
             mvn_uri="mvn:org.talend.libraries/aws-java-sdk-cloudwatch-1.10.56/6.2.0"/>
             
-        <!-- Third parties libraries -->
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.emr450"
-            id="avro-emr450-latest"
-            name="avro-1.7.5.jar" 
-            mvn_uri="mvn:org.talend.libraries/avro-1.7.5/6.2.0"/>
-            
+        <!-- Third parties libraries -->   
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr450"
             id="avro-mapred-emr450-latest"
@@ -301,12 +295,6 @@
             name="parquet-avro-1.4.1.jar"
             mvn_uri="mvn:org.talend.libraries/parquet-avro-1.4.1/6.2.0">
         </libraryNeeded>
-        
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.emr450"
-            id="htrace-core-emr450-latest"
-            name="htrace-core-3.1.0-incubating.jar" 
-            mvn_uri="mvn:org.talend.libraries/htrace-core-3.1.0-incubating/6.2.0"/>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr450"
@@ -355,9 +343,9 @@
              <library id="jersey-core-1.9.jar"/>
              <library id="jetty-util-emr450-latest"/>
              <library id="emr-metrics-client-emr450-latest"/>
-             <library id="htrace-core-emr450-latest"/>
+             <library id="htrace-core-3.1.0-incubating.jar"/>
              <library id="servlet-api-2.5.jar"/>
-             <library id="avro-emr450-latest"/>
+             <library id="avro-1.7.5.jar"/>
         </libraryNeededGroup>
         
         <!-- S3 group -->
@@ -385,7 +373,7 @@
              <library id="hadoop-yarn-api-emr450-latest"/>
              <library id="hadoop-yarn-client-emr450-latest"/>
              <library id="hadoop-yarn-common-emr450-latest"/>
-             <library id="avro-emr450-latest"/>
+             <library id="avro-1.7.5.jar"/>
              <library id="commons-configuration-1.6.jar"/>
              <library id="commons-lang-2.6.jar"/>
              <library id="commons-logging-1.1.3.jar"/>
@@ -408,7 +396,7 @@
              <library id="log4j-1.2.17.jar"/>
              <library id="jetty-util-emr450-latest"/>
              <library id="emr-metrics-client-emr450-latest"/>
-             <library id="htrace-core-emr450-latest"/>
+             <library id="htrace-core-3.1.0-incubating.jar"/>
         </libraryNeededGroup>
         
         <!-- Map/Reduce parquet group MRREQUIRED -->
@@ -437,7 +425,7 @@
              <library id="hadoop-yarn-api-emr450-latest"/>
              <library id="hadoop-yarn-client-emr450-latest"/>
              <library id="hadoop-yarn-common-emr450-latest"/>
-             <library id="avro-emr450-latest"/>
+             <library id="avro-1.7.5.jar"/>
              <library id="commons-configuration-1.6.jar"/>
              <library id="commons-lang-2.6.jar"/>
              <library id="commons-logging-1.1.3.jar"/>
@@ -461,7 +449,7 @@
              <library id="jetty-util-emr450-latest"/>
              <library id="emr-metrics-client-emr450-latest"/>
              <library id="snappy-java-1.0.5.jar"/>
-             <library id="htrace-core-emr450-latest"/>
+             <library id="htrace-core-3.1.0-incubating.jar"/>
              <library id="guava-11.0.2.jar"/>
              <library id="jline-1.0.jar"/>
              <library id="antlr-runtime-3.4.jar"/>
@@ -586,7 +574,7 @@
              <library id="hadoop-yarn-api-emr450-latest"/>
              <library id="hadoop-yarn-client-emr450-latest"/>
              <library id="hadoop-yarn-common-emr450-latest"/>
-             <library id="avro-emr450-latest"/>
+             <library id="avro-1.7.5.jar"/>
              <library id="commons-configuration-1.6.jar"/>
              <library id="commons-httpclient-3.0.1.jar"/>
              <library id="gson-2.2.4.jar"/>
@@ -610,7 +598,7 @@
              <library id="curator-framework-2.6.0.jar"/>
              <library id="curator-client-2.6.0.jar"/>
              <library id="emr-metrics-client-emr450-latest"/>
-             <library id="htrace-core-emr450-latest"/>
+             <library id="htrace-core-3.1.0-incubating.jar"/>
         </libraryNeededGroup>
         
         <!-- Hive HBase group (EMR 4.6.0 only) -->
@@ -664,7 +652,7 @@
              <library id="slf4j-log4j12-1.7.10.jar"/>
              <library id="log4j-1.2.17.jar"/>
              <library id="emr-metrics-client-emr450-latest"/>
-             <library id="htrace-core-emr450-latest"/>
+             <library id="htrace-core-3.1.0-incubating.jar"/>
         </libraryNeededGroup>
         
         <!-- Spark group MRREQUIRED -->
@@ -735,7 +723,7 @@
                 description="Spark Kafka Avro libraries for EMR 4.5.0 that are MRREQUIRED"
                 id="SPARK-KAFKA-AVRO-LIB-MRREQUIRED-EMR_4_5_0_LATEST"
                 name="SPARK-KAFKA-AVRO-LIB-MRREQUIRED-EMR_4_5_0_LATEST">
-            <library id="avro-emr450-latest"/>
+            <library id="avro-1.7.5.jar"/>
             <library id="jackson-mapper-asl-1.9.13.jar" />
             <library id="jackson-core-asl-1.9.13.jar" />
         </libraryNeededGroup>
