TDI-36005: Change column names to capitalized name. https://jira.talendforge.org/browse/TDI-36005
TDI-36004: Move key schema element logic from generated code to generator.
https://jira.talendforge.org/browse/TDI-36004

TDI-36002: Move useEndPoint condition from generated code to generator.
https://jira.talendforge.org/browse/TDI-36002

TDI-35999: Compile-time error when use ‘drop if exists and create’
https://jira.talendforge.org/browse/TDI-35999

TDI-36001: Add Throughput input on UI
https://jira.talendforge.org/browse/TDI-36001

TDI-35998: Integrate the icons
https://jira.talendforge.org/browse/TDI-35998

--- a/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBInput/tDynamoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBInput/tDynamoDBInput_messages.properties
@@ -98,10 +98,10 @@ FILTER_EXPRESSION.ITEM.PREDICATE.ITEM.AND=and
 FILTER_EXPRESSION.ITEM.PREDICATE.ITEM.OR=or
 
 NAME_MAPPING.NAME=Name mapping
-NAME_MAPPING.ITEM.PLACEHOLDER=placeholder
+NAME_MAPPING.ITEM.PLACEHOLDER=Placeholder
 NAME_MAPPING.ITEM.NAME=name
 
 VALUE_MAPPING.NAME=Value mapping
-VALUE_MAPPING.ITEM.PLACEHOLDER=placeholder
+VALUE_MAPPING.ITEM.PLACEHOLDER=Placeholder
 VALUE_MAPPING.ITEM.VALUE=value
 
