--- a/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages.properties
@@ -62,3 +62,7 @@ PROPERTY.NAME=Property Type
 CONNECTION.NAME=Component List
 
 NB_LINE.NAME = NB_LINE
+
+THROUGHPUT.NAME=Throughput
+RCU.NAME=Read Capacity Unit
+WCU.NAME=Write Capacity Unit
