[TBD-3376] tCassandraBulkExec should support SSL, use conf file to support it https://jira.talendforge.org/browse/TBD-3376

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages.properties
@@ -35,3 +35,5 @@ SSTABLE_STORE_PATH.NAME=SSTable directory
 #COLUMN_FAMILY_TYPE.NAME=Column family type
 HTTPS_SETTING.NAME=
 USE_HTTPS.NAME=Use SSL
+CONF_FILE.NAME=
+USE_CONF_FILE.NAME=Use Configuration file(cassandra.yaml)
