--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulkExec/tCassandraOutputBulkExec_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulkExec/tCassandraOutputBulkExec_messages.properties
@@ -41,3 +41,5 @@ SCHEMA_STMT.NAME=Schema statement
 INSERT_STMT.NAME=Insert statement
 HTTPS_SETTING.NAME=
 USE_HTTPS.NAME=Use SSL
+CONF_FILE.NAME=
+USE_CONF_FILE.NAME=Use Configuration file(cassandra.yaml)
