TDI-36006: Polish Key conditions and Value table on UI https://jira.talendforge.org/browse/TDI-36006

--- a/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBInput/tDynamoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBInput/tDynamoDBInput_messages.properties
@@ -57,7 +57,7 @@ NB_LINE.NAME = NB_LINE
 USE_ADVANCED_KEY_CONDITION_EXPRESSION.NAME =Use advanced key condition expression
 ADVANCED_KEY_CONDITION_EXPRESSION.NAME =Advanced key condition expression
 
-KEY_CONDITION_EXPRESSION.NAME=Key condition expression
+KEY_CONDITION_EXPRESSION.NAME=Key conditions
 KEY_CONDITION_EXPRESSION.ITEM.ID=IDs
 KEY_CONDITION_EXPRESSION.ITEM.KEY_COLUMN=Key Column
 KEY_CONDITION_EXPRESSION.ITEM.FUNCTION=Function
