[TBD-3372] Poor Job Performance with Datastax Cassandra https://jira.talendforge.org/browse/TBD-3372 support group by replica/none and support async for batch and cache the group

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -97,6 +97,11 @@ ROW_KEY_IN_LIST.ITEM.COLUMN_NAME=key column
 DELETE_COLUMN_BY_POSITION_KEY.NAME=Delete collection column based on position/key
 DELETE_COLUMN_BY_POSITION_KEY.ITEM.COLUMN_NAME=column
 USE_UNLOGGED_BATCH.NAME=Use unlogged batch
+GROUP_METHOD.NAME=Group batch method
+GROUP_METHOD.ITEM.PARTITION=Partition
+GROUP_METHOD.ITEM.REPLICA=Replica
+GROUP_METHOD.ITEM.NONE=None
+GROUP_CACHE.NAME=Cache batch group
 REPLICA_STRATEGY.NAME=Replica strategy
 REPLICA_STRATEGY.ITEM.NetworkTopologyStrategy=NetworkTopologyStrategy
 REPLICA_STRATEGY.ITEM.SimpleStrategy=SimpleStrategy
@@ -104,3 +109,5 @@ SIMEPLE_REPLICA_NUMBER.NAME=Replica number
 NETWORK_REPLICA_TABLE.NAME=Datacenter and Replica
 NETWORK_REPLICA_TABLE.ITEM.DATACENTER_NAME=Datacenter name
 NETWORK_REPLICA_TABLE.ITEM.REPLICA_NUMBER=Replica number
+ASYNC.NAME=Async execute
+CONCURRENT_TASKS.NAME=Maximum number of batches executed in parallel
