TDI-36170: Must consider name mapping for the 'Update' data action of tDynamoDBOutput https://jira.talendforge.org/browse/TDI-36170

--- a/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages.properties
@@ -65,3 +65,7 @@ NB_LINE.NAME = NB_LINE
 THROUGHPUT.NAME=Throughput
 RCU.NAME=Read Capacity Unit
 WCU.NAME=Write Capacity Unit
+
+NAME_MAPPING.NAME=Name mapping
+NAME_MAPPING.ITEM.PLACEHOLDER=Placeholder
+NAME_MAPPING.ITEM.NAME=name
