[TBD-3507] Update checkbox label in MapR ticket configuration

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -71,7 +71,7 @@ CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
 CONFIGURATIONS.NAME = Configurations
 
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 USERNAME.NAME=Username
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
