--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -112,7 +112,7 @@ HBASE_REGIONSERVER_PRINCIPAL.NAME=Hbase Region Server principal
 SET_TABLE_NS_MAPPING.NAME=Set table Namespace mappings
 TABLE_NS_MAPPING.NAME=
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 USERNAME.NAME=Username
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
