--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -219,7 +219,7 @@ HDINSIGHT_CONF.NAME=HD Insight configuration
 HDINSIGHT_USERNAME.NAME=Username
 HDINSIGHT_PASSWORD.NAME=Password
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 MAPRTICKET_USERNAME.NAME=Username
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
