--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -192,7 +192,7 @@ TEZ_LIB_NAME.NAME=Lib jars
 TEZ_LIB_NAME.ITEM.JAR_NAME=Jar name
 TEZ_LIB_PATH.NAME=Lib path(folder or file)
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 MAPRTICKET_USERNAME.NAME=Username
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
