--- a/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
@@ -62,7 +62,7 @@ FIELDSEPARATOR.NAME=Field Separator
 CUSTOM_ENCODING.NAME=Custom encoding
 ENCODING.NAME=Encoding
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 MAPRTICKET_USERNAME.NAME=Name
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
