--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -70,7 +70,7 @@ CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
 CONFIGURATIONS.NAME = Configurations
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
 MAPRTICKET_DURATION.NAME=Ticket duration
