--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSDelete/tHDFSDelete_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSDelete/tHDFSDelete_messages.properties
@@ -76,7 +76,7 @@ DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0$
 
 
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
 MAPRTICKET_DURATION.NAME=Ticket duration
