--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSOutputRaw/tHDFSOutputRaw_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSOutputRaw/tHDFSOutputRaw_messages.properties
@@ -87,7 +87,7 @@ COMPRESS_NOTE.NAME
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
 MAPRTICKET_DURATION.NAME=Ticket duration
