--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSProperties/tHDFSProperties_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSProperties/tHDFSProperties_messages.properties
@@ -74,7 +74,7 @@ DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
 MAPRTICKET_DURATION.NAME=Ticket duration
