--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
@@ -82,7 +82,7 @@ HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
-USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USE_MAPRTICKET.NAME=Force MapR Ticket authentication
 MAPRTICKET_PASSWORD.NAME=Password
 MAPRTICKET_CLUSTER.NAME=Cluster name
 MAPRTICKET_DURATION.NAME=Ticket duration
