TBD-3497:CDH 57 HBase cannot check successfully

--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -863,7 +863,7 @@
       </classloader>
       <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH5_7"
-            libraries="hbase-common-1.2.0-cdh5.7.0.jar;hbase-client-1.2.0-cdh5.7.0.jar;hbase-protocol-1.2.0-cdh5.7.0.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-logging-1.2.jar;commons-codec-1.9.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;htrace-core4-4.0.1-incubating.jar;guava-12.0.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;netty-3.6.6.Final.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;hbase-server-1.2.0-cdh5.7.0.jar">
+            libraries="hbase-common-1.2.0-cdh5.7.0.jar;hbase-client-1.2.0-cdh5.7.0.jar;hbase-protocol-1.2.0-cdh5.7.0.jar;hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-logging-1.2.jar;commons-codec-1.9.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.2.jar;zookeeper-3.4.5-cdh5.7.0.jar;htrace-core-3.2.0-incubating.jar;htrace-core4-4.0.1-incubating.jar;guava-12.0.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;netty-3.6.6.Final.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;hbase-server-1.2.0-cdh5.7.0.jar;netty-all-4.0.23.Final.jar;metrics-core-2.2.0.jar">
       </classloader>  
       <classloader
             index="MAP_REDUCE:CLOUDERA:Cloudera_CDH5_7"
