[TBD-3628] Support Atlas in HDP240

--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -901,7 +901,39 @@
             <library id="flume-ng-sdk-HDP_2_4"/>
             <library id="flume-ng-core-HDP_2_4"/>            
             <library id="avro-ipc-HDP_2_4"/>            
-        </libraryNeededGroup>     
+        </libraryNeededGroup>
+        
+        <!-- group of atlas libraries -->
+        <libraryNeededGroup
+                description="Atlas lineage API"
+                id="ATLAS_HDP_2_4"
+                name="ATLAS_HDP_2_4"  >
+             <library id="talend-cloudera-navigator-api-6.1.0-SNAPSHOT-20160615" />
+             <library id="atlas-client-0.5-incubating" />
+             <library id="atlas-typesystem-0.5-incubating" />
+             <library id="json4s-native_2.10-3.2.11" />
+             <library id="json4s-core_2.10-3.2.11" />
+             <library id="json4s-ast_2.10-3.2.11" />
+             <library id="jettison-1.3.4.jar" />
+             <library id="stax-api-1.0.1.jar" />
+             <library id="scala-compiler-2.10.4" />
+             <library id="scala-reflect-2.10.4" />
+             <library id="jline-2.10.4" />
+             <library id="jansi-1.4" />
+             <library id="scala-library-2.10.4" />
+             <library id="scala-actors-2.10.4" />
+             <library id="scalap-2.10.4" />
+             <library id="quasiquotes_2.10-2.0.1" />
+             <library id="nscala-time_2.10-1.6.0" />
+             <library id="joda-convert-1.2" />
+             <library id="config-1.2.1" />
+             <library id="gson-2.3.1" />
+             <library id="fastutil-6.5.16" />
+             <library id="guice-4.0" />
+             <library id="javax.inject-1.jar" />
+             <library id="commons-lang3-3.4" />
+        </libraryNeededGroup>
+             
     </extension>
     <extension
           point="org.talend.core.runtime.classloader_provider">
