--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -832,7 +832,7 @@
                 description="Talend cloudera navigator API."
                 id="TALEND_CLOUDERA_CDH_5_5_NAVIGATOR"
                 name="TALEND_CLOUDERA_CDH_5_5_NAVIGATOR"  >
-             <library id="talend-cloudera-navigator-api-6.1.0-SNAPSHOT-20160613" />
+             <library id="talend-lineage-api-0.1.0" />
              <library id="navigator-sdk-client-1.0" />
              <library id="navigator-sdk-model-1.0" />
              <library id="spring-core-4.0.7.RELEASE"/>
