[TBD-3628] Rename lineage project
From talend-cloudera-navigator-api
to talend-lineage-api.

--- a/main/components_lib/pom.xml
+++ b/main/components_lib/pom.xml
@@ -11,7 +11,7 @@
 	<url>http://www.talend.com</url>
 
 	<modules>
-		<module>talend-cloudera-navigator-api</module>
+		<module>talend-lineage-api</module>
 	</modules>
 
 
