[TBD-3392] Support parquet sqoop import in CDH550

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -45,6 +45,7 @@ FILE_FORMAT.NAME=File Format
 FILE_FORMAT.ITEM.textfile=Text file
 FILE_FORMAT.ITEM.sequencefile=Sequence file
 FILE_FORMAT.ITEM.avrofile=Avro file
+FILE_FORMAT.ITEM.parquetfile=Parquet file
 MYSQL_DELIMITERS.NAME=Use MySQL default Delimiters
 
 ADDITIONAL.NAME=Additional Arguments
