--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -34,6 +34,7 @@ FILE_FORMAT.NAME=File Format
 FILE_FORMAT.ITEM.textfile=textfile
 FILE_FORMAT.ITEM.sequencefile=sequencefile
 FILE_FORMAT.ITEM.avrofile=Avro file
+FILE_FORMAT.ITEM.parquetfile=Parquet file
 MYSQL_DELIMITERS.NAME=Use MySQL default Delimiters
 
 EXCLUDE_TABLE.NAME=Exclude table
