TBD-2882: Cann't propagate hadoop info to job hadoop configuration when I import nonexistent hadoop version

--- a/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
+++ b/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
@@ -274,5 +274,14 @@
              name="ChangeHadoopConfJarNameMigrationTask"
              version="6.1.2">
        </projecttask>
+       <projecttask
+             beforeLogon="false"
+             breaks="6.0.0"
+             class="org.talend.repository.hadoopcluster.migration.AdaptDeprecatedHadoopVersionsMigrationTask"
+             description="Migrate deprecated hadoop versions to the default versons of their distributions respectively."
+             id="org.talend.repository.hadoopcluster.migration.AdaptDeprecatedHadoopVersionsMigrationTask"
+             name="AdaptDeprecatedHadoopVersionsMigrationTask"
+             version="6.1.2">
+       </projecttask>
     </extension>
 </plugin>
